# sync-async-k8s-path

./: .dockerignore  .gitignore  Dockerfile  LICENSE  README.md  compose.yaml  index.html  main.py  pyproject.toml
.claude/agents/: demo-infra-mentor.md  mentor-content-reviewer.md
app/: db.py  main.py  models.py  schemas.py
app/routers/: experiments.py  social.py
db/: init.sql
k8s/: README.md  app.yaml  db.yaml  namespace.yaml
locustfiles/: README.md  demo1_basics.py  demo2_event_loop.py  demo3_attacker_bottleneck.py  demo4_sync_vs_async_db.py  demo5_pool_starvation.py  demo6_step_load_social.py
results/: README.md  demo5_pool100_dockerstats.txt  demo5_pool100_locust.txt  demo5_pool100_stats.csv  demo5_pool100_stats_history.csv  demo5_pool10_dockerstats.txt  demo5_pool10_locust.txt  demo5_pool10_stats.csv  demo5_pool10_stats_history.csv  demo5_pool20_dockerstats.txt  demo5_pool20_locust.txt  demo5_pool20_stats.csv  demo5_pool20_stats_history.csv  demo5_pool50_dockerstats.txt  demo5_pool50_locust.txt  demo5_pool50_stats.csv  demo5_pool50_stats_history.csv  demo5_pool5_ACCIDENTAL_locust.txt  demo6_app_logs.txt  demo6_app_state.txt  demo6_dockerstats.txt  demo6_failures.csv  demo6_locust.txt  demo6_stats.csv  demo6_stats_history.csv
