[project]
name = "k8s"
version = "0.1.0"
description = "大流量壓測訓練靶機 — Mini Social Platform (FastAPI)"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.136.3",
    "psycopg[binary]>=3.3.4",
    "sqlalchemy[asyncio]>=2.0",
    "uvicorn[standard]>=0.49.0",
]

[dependency-groups]
dev = [
    "locust>=2.44.1",
]
